# polo-faka

./: .dockerignore  .env.prod.example  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: build-and-push.yml  desktop-release.yml
apps/api/: .env.example  Dockerfile  package.json  tsconfig.json
apps/api/prisma/: cursor-quota-init.sql  schema.prisma  seed.ts
apps/api/scripts/: entrypoint.sh  post-deploy.cjs
apps/api/src/: app.module.ts  main.ts
apps/api/test/: cursor-quota-model-pricing.spec.ts  (+1 more)
apps/desktop/: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  refresh.rs  shop_api.rs
apps/desktop/src-tauri/src/commands/: account.rs  cursor.rs  deep_link.rs  machine.rs  mod.rs  pool.rs  recycle.rs  settings.rs  store.rs  usage.rs
apps/desktop/src-tauri/src/cursor/: machine_id.rs  mod.rs  paths.rs  process.rs  refund.rs  session.rs  state_vscdb.rs  storage_json.rs  token_parser.rs  usage.rs
apps/desktop/src-tauri/src/store/: accounts.rs  mod.rs  settings.rs
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
deploy/: Caddyfile  backup.sh  deploy-acr.sh  deploy.sh  init-server-rocky.sh  init-server.sh  setup-swap.sh
deploy/static/: .gitkeep
(+240 files in other folders)
